# PWAParsers

./: README.md  pyproject.toml
src/pwaparsers/: datamodel_base.py  utils.py
src/pwaparsers/parsers/: decayamplitude.py
tests/: test_decayamplitude.py
tests/test_data/: jpsikplpipi.json
