[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pwaparsers"]

[project]
name = "PWAParsers"
version = "0.1.0"
description = "A project for parsing PWA files for https://kaihabermann.github.io/DecaySelector/"
license = "MIT"
readme = "README.md"
authors = [
  { name = "Kai Habermann", email = "kai.sebastian.habermann@cern.ch" }
]



classifiers = [
  "Development Status :: 4 - Beta",
]
dependencies = [
  "decayangle==1.1.2",
  "pydantic==2.11.7",

]

[project.urls]
Issues = "https://github.com/KaiHabermann/decayamplitude/issues"
Source = "https://github.com/KaiHabermann/decayamplitude"

[tool.coverage.run]
branch = true
relative_files = true
omit = [
    'tests/*',
]

[tool.hatch.envs.test]
dependencies = [
  "coverage[toml]",
  "pytest",
  "pytest-cov",
]

[tool.hatch.envs.test.scripts]
cov = 'pytest --cov-report=term-missing --cov-report=xml --cov-config=pyproject.toml --cov --cov=tests'

[[tool.hatch.envs.test.matrix]]
python = ["312", "311", "310", "3.9"] 
version = ["0.1.0"]
